--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   transparent_image: ^2.0.0
   provider: ^6.0.0
   http: ^0.13.3
+  html: ^0.15.0
 
 dev_dependencies:
   flutter_test:
